--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                             <li type="none"><a href="CONTACT.html">CONTACT</a></li>
                         </ul>
                     </div>
+                    <!-- this is new change in this file  -->
                     <div class="footer-col">
                         <h4>follow Us</h4>
                         <div class="bottom-line1"></div>
